--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,12 +35,38 @@ jobs:
         env:
           GITHUB_PAGES: 'true'
           GITHUB_REPOSITORY: ${{ github.repository }}
+          NODE_ENV: 'production'
         run: |
           echo "Building with GITHUB_PAGES=$GITHUB_PAGES"
           echo "Building with GITHUB_REPOSITORY=$GITHUB_REPOSITORY"
-          npm run build
-          echo "Build completed. Checking index.html..."
-          cat dist/index.html | head -20
+          echo "Repository name: $(echo $GITHUB_REPOSITORY | cut -d'/' -f2)"
+          
+          # Fazer build com variáveis de ambiente explicitamente
+          GITHUB_PAGES='true' GITHUB_REPOSITORY="$GITHUB_REPOSITORY" npm run build
+          
+          # Verificar se o build foi bem-sucedido
+          if [ ! -f "dist/index.html" ]; then
+            echo "ERROR: dist/index.html was not generated!"
+            exit 1
+          fi
+          
+          echo ""
+          echo "=== Build completed. Checking index.html ==="
+          cat dist/index.html
+          
+          echo ""
+          echo "=== Checking assets ==="
+          ls -la dist/assets/ || echo "WARNING: assets directory not found!"
+          
+          # Verificar se o base path está correto no index.html
+          echo ""
+          echo "=== Verifying base path ==="
+          if grep -q "/AdmFinanceira/assets" dist/index.html; then
+            echo "✅ Base path is correct in index.html"
+          else
+            echo "❌ WARNING: Base path may be incorrect in index.html"
+            grep -E "(src=|href=)" dist/index.html || true
+          fi
 
       - name: Copy 404.html to dist
         run: |
